# llibfetion-linux-and-windows

libfetion/: Crypto Hash.rar  Makefile.am  Makefile.in  build.txt  config.c  config.h  config.h.in  configure  configure.in  contact.cpp  cookie.txt  fxsocket.c  fxsocket.h  g_libfetion.h  get.xml  initial.c  libcurl_test.cbp  libcurl_test.depend  libcurl_test.layout  libcurl_test.workspace  libfetion.cpp  libfetion.def  libfetion.dsp  libfetion.dsw  libfetion.h  libfetion.lib  libfetion.ncb  libfetion.opt  log.c  login.c  main.c  mem.c  protocol.c  protocol.h  register.cpp  register.h  sendSMS.cpp  sys_conf.xml  tags  user_conf.xml  (+1 more)
libfetion/Debug/: libfetion.lib
libfetion/Help/html/: annotated.html  classes.html  contact_8cpp.html  files.html  g__libfetion_8h.html  g__libfetion_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.chm  index.hhc  index.hhc.bak  index.hhk  index.hhk.bak  index.hhp  index.html  libfetion_8cpp.html  libfetion_8h.html  libfetion_8h_source.html  libfetion__test_2g__libfetion_8h_source.html  libfetion__test_2libfetion_8h_source.html  register_8cpp.html  register_8h.html  register_8h_source.html  send_s_m_s_8cpp.html  struct___c_o_n_t_a_c_t___l_i_s_t.html  struct___m_a_k_e___p_a_c_k_e_t___d_a_t_a___s_t_e_p2-members.html  struct___m_a_k_e___p_a_c_k_e_t___d_a_t_a___s_t_e_p2.html  struct___m_a_k_e___p_a_c_k_e_t___s_e_n_d___s_m_s-members.html  struct__struc__get__login__data-members.html  (+2 more)
libfetion/codeblocks/: libcurl_test.cbp  libcurl_test.depend  libcurl_test.layout
libfetion/lib_link/: HOW TO BUILD THIS.txt  libcurl_share.lib  libcurl_ssl_static.lib  libxml2_share.lib  libxml2_static.lib  pthread_static.lib
libfetion/libfetion_test/: cookie.txt  g_libfetion.h  libfetion.h  libfetion_test.cpp  libfetion_test.dsp
libfetion/libsipc4/: Makefile.in  config.h.in  configure  configure.in
libfetion/src/: Makefile.am  Makefile.in  commdef.h  config.c  config.h  crypto.c  crypto.h  fxsocket.c  fxsocket.h  helper.c  helper.h  initial.c  initial.h  log.c  log.h  login.c  login.h  main.c  mem.c  mem.h  mutex.c  mutex.h  process.c  process.h  protocol.c  protocol.h  sipc.c  sipc.h  thread.c  thread.h  utf8.c  utf8.h  xml.c  xml.h
libfetion/vc6/: build.txt  libfetion_test.dsp  libfetion_test.dsw  libfetion_test.ncb  libfetion_test.opt  libfetion_test.plg  libfetion_test.vcproj
libfetion/vc8/: libfetion_test.vcproj
libfetion/vc9/: libfetion_test.vcproj
(+144 files in other folders)
